# django-collab-base-templates

./: Readme.md  setup.cfg
collab/static/css/: bootstrap-datetimepicker-standalone.css
collab/templates/: base.html
collab/templates/collab/: empty_iframe.html  plugin.html
collab/templates/collab/includes/: spaces_links.html
collab_base_templates/static/css/: custom.css
collab_base_templates/static/js/: custom.js
collab_base_templates/templates/: base_site.html
collab_base_templates/templates/collab/includes/: spaces_links.html
collab_base_templates/templates/registration/: logged_out.html  login.html
