[metadata]
name = django_collab_base_templates
author = Mattes Sarcander
description = App-independent templates, js and css for Django Collab.
version = 0.1
url = https://github.com/Fortschritt/django-collab-base-templates
keywords = 
classifiers = 
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.4